[service] 模板实例监听多集群